(fix): placeholder text is cut off in peer to peer boost (#950)

--- a/src/app/modules/boost/creator/p2p-search/p2p-search.component.scss
+++ b/src/app/modules/boost/creator/p2p-search/p2p-search.component.scss
@@ -4,9 +4,12 @@ m-boost--creator-p2p-search {
     width: 60%;
     max-width: 100%;
 
-    .m-boost--creator-wide-input--edit {
-      width: 100%;
-      max-width: 100%!important;
+    @media screen and (max-width: $max-mobile) {
+      width: 70%;
+    }
+
+    .m-boost--creator-wide-input--edit.m-boost--creator--target {
+      max-width: initial !important;
     }
   }
 }  
